music/data/Log/log_2023-12-19_11-44.txt
[11:44:30] [DEBUG] Running client sanity checks...
[11:44:31] [DEBUG] Loaded Extension: interactions.ext.jurigged
[11:44:31] [DEBUG] Added callback: __join
[11:44:31] [DEBUG] Added callback: __leave
[11:44:31] [DEBUG] Added callback: _about
[11:44:31] [DEBUG] Added callback: _setup
[11:44:31] [DEBUG] Added callback: on_start
[11:44:31] [DEBUG] 5 callbacks have been loaded from __main__.
[11:44:31] [DEBUG] Added callback: _disconnect
[11:44:31] [DEBUG] Added callback: _on_websocket_ready
[11:44:31] [DEBUG] Added callback: on_autocomplete_completion
[11:44:31] [DEBUG] Added callback: on_autocomplete_error
[11:44:31] [DEBUG] Added callback: on_command_completion
[11:44:31] [DEBUG] Added callback: on_command_error
[11:44:31] [DEBUG] Added callback: on_component_completion
[11:44:31] [DEBUG] Added callback: on_component_error
[11:44:31] [DEBUG] Added callback: on_error
[11:44:31] [DEBUG] Added callback: on_modal_completion
[11:44:31] [DEBUG] Added callback: on_modal_error
[11:44:31] [DEBUG] Added callback: on_resume
[11:44:31] [DEBUG] 12 callbacks have been loaded from Client.
[11:44:31] [DEBUG] Attempting to login
[11:44:31] [DEBUG] Caching ingested rate limit data for: 78bb8553d9352a5a2f89f9def401287a
[11:44:31] [DEBUG] GET /users/@me Has exhausted its ratelimit (1000)! Locking route for 0.001 seconds
[11:44:31] [DEBUG] GET /users/@me Received 200 :: [0/1000 calls remaining]
[11:44:32] [DEBUG] Caching ingested rate limit data for: d28a133af187e91d71d96a223467ce49
[11:44:32] [DEBUG] GET /oauth2/applications/@me Has exhausted its ratelimit (1000)! Locking route for 0.001 seconds
[11:44:32] [DEBUG] GET /oauth2/applications/@me Received 200 :: [0/1000 calls remaining]
[11:44:32] [WARNING] Setting sync_ext to True by default for syncing changes
[11:44:32] [INFO] Loading jurigged
[11:44:32] [DEBUG] Watch D:\Project\Python\qpneruy-Git\music\Main.py
[11:44:32] [DEBUG] Caching ingested rate limit data for: 0a6d458104b103c7be293cc9b284d9ee
[11:44:32] [DEBUG] GET /gateway Received 200 :: [99/100 calls remaining]
[11:44:32] [INFO] Shard ID 0 | Starting Shard
[11:44:32] [INFO] Shard ID 0 | Shard is attempting to connect to gateway...
[11:44:32] [DEBUG] Shard ID 0 | Identification payload sent to gateway, requesting intents: 3407613
[11:44:32] [INFO] Shard ID 0 | Gateway connection established
[11:44:32] [DEBUG] Shard ID 0 | Session ID: 4b2b60edcdc46b3729b860be3a71f5cf Trace: ['["gateway-prd-us-east1-d-6nnc",{"micros":93591,"calls":["id_created",{"micros":1255,"calls":[]},"session_lookup_time",{"micros":387,"calls":[]},"session_lookup_finished",{"micros":15,"calls":[]},"discord-sessions-prd-2-255",{"micros":91464,"calls":["start_session",{"micros":65985,"calls":["discord-api-dc69f8484-8f9tx",{"micros":60583,"calls":["get_user",{"micros":14040},"get_guilds",{"micros":8444},"send_scheduled_deletion_message",{"micros":12},"guild_join_requests",{"micros":679},"authorized_ip_coro",{"micros":12}]}]},"starting_guild_connect",{"micros":57,"calls":[]},"presence_started",{"micros":340,"calls":[]},"guilds_started",{"micros":168,"calls":[]},"guilds_connect",{"micros":2,"calls":[]},"presence_connect",{"micros":24879,"calls":[]},"connect_finished",{"micros":24885,"calls":[]},"build_ready",{"micros":26,"calls":[]},"clean_ready",{"micros":1,"calls":[]},"optimize_ready",{"micros":0,"calls":[]},"split_ready",{"micros":1,"calls":[]}]}]}]']
[11:44:32] [DEBUG] Dispatching Event: websocket_ready
[11:44:33] [DEBUG] Caching ingested rate limit data for: dd84d9818020c27975c0d5ab4a794d44
[11:44:33] [DEBUG] GET /applications/{application_id}/commands Has exhausted its ratelimit (1000)! Locking route for 0.001 seconds
[11:44:33] [DEBUG] GET /applications/{application_id}/commands Received 200 :: [0/1000 calls remaining]
[11:44:33] [DEBUG] Waiting for bucket dd84d9818020c27975c0d5ab4a794d44 to unlock.
[11:44:33] [DEBUG] Caching ingested rate limit data for: dd84d9818020c27975c0d5ab4a794d44
[11:44:33] [DEBUG] GET /applications/{application_id}/commands Has exhausted its ratelimit (1000)! Locking route for 0.001 seconds
[11:44:33] [DEBUG] GET /applications/{application_id}/commands Received 200 :: [0/1000 calls remaining]
[11:44:33] [DEBUG] 0 is already up-to-date with 15 commands.
[11:44:33] [DEBUG] Sync of 1 scopes took 0.6899680000060471 seconds
[11:44:33] [DEBUG] Dispatching Event: startup
[11:44:33] [DEBUG] Sending data to websocket: {"op": 3, "d": {"since": 1702961073623, "activities": [{"name": "/help for helpful", "type": 0}], "status": "idle", "afk": false}}
[11:44:36] [DEBUG] Sending heartbeat every 41.25 seconds
[11:44:36] [DEBUG] Sending data to websocket: {"op": 1, "d": 6}
[11:44:36] [DEBUG] Shard ID 0 | ❤ Gateway is sending a Heartbeat
[11:44:36] [DEBUG] Shard ID 0 | ❤ Received heartbeat acknowledgement from gateway
[11:44:37] [ERROR] Jurigged encountered an error
Traceback (most recent call last):
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\live.py", line 104, in refresh
    cf.refresh()
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\codetools.py", line 1118, in refresh
    new_source = self.read_source()
                 ^^^^^^^^^^^^^^^^^^
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\codetools.py", line 1065, in read_source
    source = f.read()
             ^^^^^^^^
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1258.py", line 23, in decode
    return codecs.charmap_decode(input,self.errors,decoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeDecodeError: 'charmap' codec can't decode byte 0x8f in position 2785: character maps to <undefined>
[11:44:42] [ERROR] Jurigged encountered an error
Traceback (most recent call last):
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\live.py", line 104, in refresh
    cf.refresh()
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\codetools.py", line 1118, in refresh
    new_source = self.read_source()
                 ^^^^^^^^^^^^^^^^^^
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\codetools.py", line 1065, in read_source
    source = f.read()
             ^^^^^^^^
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\encodings\cp1258.py", line 23, in decode
    return codecs.charmap_decode(input,self.errors,decoding_table)[0]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeDecodeError: 'charmap' codec can't decode byte 0x8f in position 2785: character maps to <undefined>
[11:45:04] [ERROR] Jurigged encountered an error
Traceback (most recent call last):
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\live.py", line 104, in refresh
    cf.refresh()
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\codetools.py", line 1120, in refresh
    cf = CodeFile(
         ^^^^^^^^^
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\site-packages\jurigged\codetools.py", line 1034, in __init__
    tree = ast.parse(self.saved)
           ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\huuti\AppData\Local\Programs\Python\Python311\Lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: source code string cannot contain null bytes
[11:45:10] [DEBUG] Dispatching Event: disconnect
[11:45:10] [DEBUG] Stopping the bot.
[11:45:10] [INFO] Shard ID 0 | Stopping Shard
